--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@lottiefiles/lottie-player": "^2.0.2",
